[package]
name = "actix_api"
version = "0.1.0"
authors = ["funyx <ddobchev@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "^4"
uuid = { version = "^1.2", features = ["v4"]}
serde = { version = "^1", features = ["derive"]}
aws-config = "^0.49"
aws-sdk-dynamodb = "^0.19"
env_logger = "^0.9"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"]}
derive_more = "^0.99"